--- a/test/test_mqtt.tavern.yaml
+++ b/test/test_mqtt.tavern.yaml
@@ -26,7 +26,7 @@ stages:
       topic: hasp/{plate}/state/page
       payload: "1"
       timeout: 1
-    delay_after: 0
+
   - name: step 2 - Page test
     mqtt_publish:
       topic: hasp/{plate}/command
@@ -35,7 +35,7 @@ stages:
       topic: hasp/{plate}/state/page
       payload: "2"
       timeout: 1
-    delay_after: 0
+
   - name: step 3 - Page test
     mqtt_publish:
       topic: hasp/{plate}/command
@@ -44,7 +44,7 @@ stages:
       topic: hasp/{plate}/state/page
       payload: "3"
       timeout: 1
-    delay_after: 0
+
   - name: step 4 - Page test
     mqtt_publish:
       topic: hasp/{plate}/command/json
@@ -53,7 +53,7 @@ stages:
       topic: hasp/{plate}/state/page
       payload: "1"
       timeout: 1
-    delay_after: 0
+
   - name: step 5 - Page test
     mqtt_publish:
       topic: hasp/{plate}/command/json
@@ -62,7 +62,6 @@ stages:
       topic: hasp/{plate}/state/page
       payload: "1"
       timeout: 1
-    delay_after: 0
 
 ---
 test_name: Reboot Command
@@ -77,9 +76,18 @@ paho-mqtt:
   connect:
     host: "{host}"
     port: !int "{port:d}"
-    timeout: 1
+    timeout: 3
+  auth:
+    username: "{username}"
+    password: "{password}"
 
 stages:
+  - name: Lower idle values
+    mqtt_publish:
+      topic: hasp/{plate}/config/gui
+      json:
+        idle1: 6
+        idle2: 13
   - name: Test reboot command
     mqtt_publish:
       topic: hasp/{plate}/command/reboot
@@ -103,6 +111,9 @@ paho-mqtt:
     host: "{host}"
     port: !int "{port:d}"
     timeout: 3
+  auth:
+    username: "{username}"
+    password: "{password}"
 
 stages:
   - name: Test idle
@@ -111,17 +122,16 @@ stages:
       payload: "wakeup"
     mqtt_response:
       topic: hasp/{plate}/state/idle
-      payload: "long"
-      timeout: 190
-
-  - name: Test idle
-    mqtt_publish:
-      topic: hasp/{plate}/command
-      payload: "wakeup"
+      payload: "off"
+      timeout: 5
     mqtt_response:
       topic: hasp/{plate}/state/idle
       payload: "short"
-      timeout: 70
+      timeout: 15
+    mqtt_response:
+      topic: hasp/{plate}/state/idle
+      payload: "long"
+      timeout: 30
 
   - name: Test idle
     mqtt_publish:
@@ -130,4 +140,4 @@ stages:
     mqtt_response:
       topic: hasp/{plate}/state/idle
       payload: "off"
-      timeout: 1
+      timeout: 5
