--- a/platformio.ini
+++ b/platformio.ini
@@ -49,6 +49,7 @@ build_flags =
     -D LV_LVGL_H_INCLUDE_SIMPLE     ; for lv_drivers
     -D LV_COMP_CONF_INCLUDE_SIMPLE  ; for components
     -D LV_SYMBOL_DEF_H              ; don't load default symbol defines
+    -D LV_MEM_FULL_DEFRAG_CNT=4     ; stability: run lv_mem_defrag more frequently
     ; -- ESP build options ------------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     ; -- ArduinoJson build options ----------------------------
