--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -6,6 +6,8 @@ extra_scripts =
   tools/linux_build_extra.py
 build_flags =
   ${env.build_flags}
+    -D HASP_MODEL="MacOS X"
+
   ; ----- Monitor
   -D TFT_WIDTH=240
   -D TFT_HEIGHT=320
