--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -13,6 +13,7 @@ build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
     ${esp32.ps_ram}
+    -D HASP_MODEL="WT32-SC01"
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.wt32-sc01}
