--- a/user_setups/linux_sdl/linux_sdl_64bits.ini
+++ b/user_setups/linux_sdl/linux_sdl_64bits.ini
@@ -5,6 +5,8 @@ extra_scripts =
   tools/linux_build_extra.py
 build_flags =
   ${env.build_flags}
+  -D HASP_MODEL="Posix Linux"
+
   ; ----- Monitor
   -D TFT_WIDTH=240
   -D TFT_HEIGHT=320
