--- a/user_setups/esp32/arduitouch-esp32_ili9341.ini
+++ b/user_setups/esp32/arduitouch-esp32_ili9341.ini
@@ -12,6 +12,7 @@ board = esp32dev
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
+    -D HASP_MODEL="Arduitouch"
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
