--- a/user_setups/esp32/freetouchdeck.ini
+++ b/user_setups/esp32/freetouchdeck.ini
@@ -11,6 +11,7 @@ board = esp32dev
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
+    -D HASP_MODEL="FreeTouchDeck"
 
 ;region -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
