--- a/user_setups/esp32/huzzah32-featherwing-24.ini
+++ b/user_setups/esp32/huzzah32-featherwing-24.ini
@@ -12,6 +12,8 @@ board = featheresp32
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
+    -D HASP_MODEL="Featherwing 2.4"
+
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.featherwing-24}
     -D TFT_MISO=19
