--- a/user_setups/esp32/huzzah32-featherwing-35.ini
+++ b/user_setups/esp32/huzzah32-featherwing-35.ini
@@ -12,6 +12,8 @@ board = featheresp32
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
+    -D HASP_MODEL="Featherwing 3.5"
+
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.featherwing-35}
     -D TFT_MISO=19
