--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -17,6 +17,7 @@ build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
     ${esp32.ps_ram}
+    -D HASP_MODEL="Lanbon L8"
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.st7789v}
