--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -17,6 +17,7 @@ build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
     ${esp32.ps_ram}
+    -D HASP_MODEL="M5Stack core2"
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.m5stack}
