Revert "Merge master back into gpio-redesign"

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -1,11 +1,11 @@
-# Copy and rename this file to config.yaml
+# config.yaml
 ---
 name: Common test information
 description: Connection information for MQTT Client
 
 variables:
   host: homeassistant.local
-  username: <mqtt_username>
-  password: <mqtt_password>
+  username: hasp
+  password: hasp
   port: 1883
-  plate: <platename>
+  plate: plate35
