--- a/test/test_colors.tavern.yaml
+++ b/test/test_colors.tavern.yaml
@@ -1,35 +1,6 @@
 # test_value_str.tavern.yaml
 ---
-test_name: Colors setup
-
-includes:
-  - !include config.yaml
-
-paho-mqtt:
-  client:
-    transport: tcp
-    client_id: tavern-tester
-  connect:
-    host: "{host}"
-    port: !int "{port:d}"
-    timeout: 3
-  auth:
-    username: "{username}"
-    password: "{password}"
-
-stages:
-  - name: Page 1
-    mqtt_publish:
-      topic: hasp/{plate}/command
-      payload: "page 1"
-    mqtt_response:
-      topic: hasp/{plate}/state/page
-      payload: "1"
-      timeout: 1
-    delay_after: 0
-
----
-test_name: Colors loop
+test_name: Obj Standard Properties
 
 includes:
   - !include config.yaml
@@ -106,10 +77,27 @@ marks:
         - btn
 
 stages:
+  - name: Page 1
+    mqtt_publish:
+      topic: hasp/{plate}/command
+      payload: "page 1"
+    mqtt_response:
+      topic: hasp/{plate}/state/page
+      payload: "1"
+      timeout: 1
+    delay_after: 0
+
   - name: Set bg_color
     mqtt_publish:
-      topic: hasp/{plate}/command/json
-      payload: '["p1b0.bg_color={color}","clearpage"]'
+      topic: hasp/{plate}/command
+      payload: "p[1].b[0].bg_color={color}"
+    delay_after: 0.02
+
+  - name: Clear page
+    mqtt_publish:
+      topic: hasp/{plate}/command/clearpage
+      payload: ""
+    delay_after: 0.02
 
   - name: Create object
     mqtt_publish:
@@ -121,16 +109,18 @@ stages:
         r: !int "{r:d}"
         g: !int "{g:d}"
         b: !int "{b:d}"
+    delay_after: 0.02
 
   - name: Set bg_color
     mqtt_publish:
       topic: hasp/{plate}/command
       payload: "p[1].b[0].bg_color={rgb565}"
+    delay_after: 0.02
 
   - name: Test named COLOR
     mqtt_publish:
       topic: hasp/{plate}/command/json
-      payload: '["p1b1.text_color={color}","p1b1.text_color"]'
+      payload: '["p[1].b[1].text_color={color}","p[1].b[1].text_color"]'
     mqtt_response:
       topic: hasp/{plate}/state/p1b1
       json:
@@ -143,12 +133,13 @@ stages:
   - name: Reset
     mqtt_publish:
       topic: hasp/{plate}/command
-      payload: "p1b1.text_color=123"
+      payload: "p[1].b[1].text_color=123"
+    delay_after: 0.02
 
   - name: Test hex COLOR
     mqtt_publish:
       topic: hasp/{plate}/command/json
-      payload: '["p1b1.text_color={hex}","p1b1.text_color"]'
+      payload: '["p[1].b[1].text_color={hex}","p[1].b[1].text_color"]'
     mqtt_response:
       topic: hasp/{plate}/state/p1b1
       json:
@@ -161,12 +152,13 @@ stages:
   - name: Reset
     mqtt_publish:
       topic: hasp/{plate}/command
-      payload: "p1b1.text_color=529"
+      payload: "p[1].b[1].text_color=529"
+    delay_after: 0.02
 
   - name: Test rgb565 COLOR
     mqtt_publish:
       topic: hasp/{plate}/command/json
-      payload: '["p1b1.text_color={rgb565}","p1b1.text_color"]'
+      payload: '["p[1].b[1].text_color={rgb565}","p[1].b[1].text_color"]'
     mqtt_response:
       topic: hasp/{plate}/state/p1b1
       json:
