--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -6,7 +6,7 @@ extra_scripts =
   tools/linux_build_extra.py
 build_flags =
   ${env.build_flags}
-    -D HASP_MODEL="MacOS X"
+    -D HASP_MODEL="MacOS X App"
 
   ; ----- Monitor
   -D TFT_WIDTH=240
