--- a/user_setups/win32/windows_sdl_64bits.ini
+++ b/user_setups/win32/windows_sdl_64bits.ini
@@ -5,7 +5,7 @@ extra_scripts =
   tools/windows_build_extra.py
 build_flags =
   ${env.build_flags}
-  -D HASP_MODEL="Windows"
+  -D HASP_MODEL="Windows App"
 
   ; ----- Monitor
   -D TFT_WIDTH=240
