--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -12,6 +12,7 @@ board = wemos_d1_mini32
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
+    -D HASP_MODEL="ESP32 D1 Mini"
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
