--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -19,6 +19,7 @@ build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
     ${esp32.ps_ram}
+    -D HASP_MODEL="Lolin D32 Pro"
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
