--- a/user_setups/linux_sdl/linux_sdl_64bits.ini
+++ b/user_setups/linux_sdl/linux_sdl_64bits.ini
@@ -5,7 +5,7 @@ extra_scripts =
   tools/linux_build_extra.py
 build_flags =
   ${env.build_flags}
-  -D HASP_MODEL="Posix Linux"
+  -D HASP_MODEL="Linux App"
 
   ; ----- Monitor
   -D TFT_WIDTH=240
