Fix compiler warnings

--- a/platformio.ini
+++ b/platformio.ini
@@ -126,7 +126,7 @@ build_flags =
     -D HASP_USE_CONFIG=1            ; Native application, not library
     -D LV_LOG_TRACE_TIMER=1
 ; -- LittleFS build options ------------------------
-	-D CONFIG_LITTLEFS_FOR_IDF_3_2
+	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
 
 lib_ignore =
     GxTFT
