Enable fake gpio for native app

--- a/user_setups/linux_sdl/linux_sdl_64bits.ini
+++ b/user_setups/linux_sdl/linux_sdl_64bits.ini
@@ -25,7 +25,7 @@ build_flags =
   -D HASP_USE_SPIFFS=0
   -D HASP_USE_LITTLEFS=0
   -D HASP_USE_EEPROM=0
-  -D HASP_USE_GPIO=0
+  -D HASP_USE_GPIO=1
   -D HASP_USE_CONFIG=0            ; Standalone application, as library
   -D HASP_USE_DEBUG=1
   -D HASP_USE_MQTT=1
@@ -81,6 +81,7 @@ src_filter =
   -<MQTTVersion.c>
   -<SSLSocket.c>
   -<sys/>
+  +<sys/gpio/>
   -<hal/>
   +<drv/>
   -<drv/touch>
