--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -26,7 +26,7 @@ build_flags =
   -D HASP_USE_SPIFFS=0
   -D HASP_USE_LITTLEFS=0
   -D HASP_USE_EEPROM=0
-  -D HASP_USE_GPIO=0
+  -D HASP_USE_GPIO=1
   -D HASP_USE_CONFIG=0            ; Standalone application, as library
   -D HASP_USE_DEBUG=1
   -D HASP_USE_MQTT=1
@@ -86,6 +86,7 @@ src_filter =
   -<MQTTVersion.c>
   -<SSLSocket.c>
   -<sys/>
+  +<sys/gpio/>
   -<hal/>
   +<drv/>
   -<drv/touch>
