--- a/platformio.ini
+++ b/platformio.ini
@@ -95,6 +95,7 @@ platform = espressif32
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partition_app1704k_spiffs720k.csv
+board_build.filesystem = littlefs
 
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
@@ -146,6 +147,7 @@ ps_ram =
     -mfix-esp32-psram-cache-issue
 
 extra_scripts =
+    tools/littlefsbuilder.py
     tools/esp_merge_bin.py
     tools/analyze_elf.py
 ;    ${env.extra_scripts}
