--- a/platformio.ini
+++ b/platformio.ini
@@ -96,7 +96,9 @@ board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partition_app1704k_spiffs720k.csv
 board_build.filesystem = littlefs
-
+board_build.embed_files =
+    data/edit.htm.gz
+    
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
 
