--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -5,7 +5,7 @@
 
 [platformio]
 extra_configs =
-	; Uncomment or edit the lines to show more User Setups in the PIO sidebar
+    ; Uncomment or edit the lines to show more User Setups in the PIO sidebar
     ; user_setups/darwin_sdl/*.ini
     ; user_setups/esp32/*.ini
     ; user_setups/esp8266/*.ini
@@ -21,7 +21,7 @@ build_flags =
 
 ;region -- Default Build Environments : Used when Build All ---
 extra_default_envs =
-    ; Comment unneeded environments or create extra
+    ; Uncomment specific environments or create extra:
     ; arduitouch-esp32_ili9341
     ; d1-mini-esp32_ili9341
     ; d1-mini-esp8266_ili9341
