TFT_eSPI version bump to 2.3.66

--- a/platformio.ini
+++ b/platformio.ini
@@ -75,7 +75,7 @@ lib_deps =
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
     lvgl/lvgl@^7.11.0                ; from PIO library
-    bodmer/TFT_eSPI@^2.3.62           ; Tft SPI drivers EXACT version 2.3.5 has compile error
+    bodmer/TFT_eSPI@^2.3.66
     ;git+https://github.com/Bodmer/TFT_eSPI.git
     ; ------ Unused / Test libraries
     ;https://github.com/netwizeBE/TFT_eSPI.git
@@ -98,7 +98,7 @@ board_build.partitions = user_setups/esp32/partition_app1704k_spiffs720k.csv
 board_build.filesystem = littlefs
 board_build.embed_files =
     data/edit.htm.gz
-    
+
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
 
