Update platform = espressif32

--- a/platformio.ini
+++ b/platformio.ini
@@ -90,7 +90,7 @@ src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font
 ; -- Platform specific build flags
 [esp32]
 framework = arduino
-platform = espressif32
+platform = espressif32@^3.10006.210326
 
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
