--- a/platformio.ini
+++ b/platformio.ini
@@ -116,6 +116,7 @@ build_flags =
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=61440U           ; 60kB lvgl memory
+    -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
