Decorate Loop() functions with IRAM_ATTR

--- a/platformio.ini
+++ b/platformio.ini
@@ -116,12 +116,13 @@ build_flags =
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=61440U           ; 60kB lvgl memory
-    -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
+    -D LV_ATTRIBUTE_FAST_MEM=
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
     ;-D USE_DMA_TO_TFT
 ; -- openHASP build options ------------------------
+    -D HASP_ATTRIBUTE_FAST_MEM=IRAM_ATTR
     -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
@@ -189,10 +190,12 @@ build_flags=
     -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=12288U              ; 12kB lvgl memory
+    -D LV_ATTRIBUTE_FAST_MEM=
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1    ; for PROGMEM arguments
     -D ARDUINOJSON_ENABLE_STD_STRING=1 ; for std::string
 ; -- openHASP build options -------------------------
+    -D HASP_ATTRIBUTE_FAST_MEM=
     -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
