--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -31,7 +31,9 @@ build_flags =
   -D HASP_USE_DEBUG=1
   -D HASP_USE_MQTT=1
   -D MQTT_MAX_PACKET_SIZE=2048
+  -D HASP_ATTRIBUTE_FAST_MEM=
   -D IRAM_ATTR=                      ; No IRAM_ATTR available
+  -D PROGMEM=                      ; No PROGMEM available
   ;-D LV_LOG_LEVEL=LV_LOG_LEVEL_INFO
   ;-D LV_LOG_PRINTF=1
   ; Add recursive dirs for hal headers search
