--- a/platformio.ini
+++ b/platformio.ini
@@ -190,7 +190,7 @@ build_flags=
     -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=12288U              ; 12kB lvgl memory
-    -D LV_ATTRIBUTE_FAST_MEM=
+    -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1    ; for PROGMEM arguments
     -D ARDUINOJSON_ENABLE_STD_STRING=1 ; for std::string
