Adjust partitions to use all remaining space for lfs filesystem

--- a/platformio.ini
+++ b/platformio.ini
@@ -94,7 +94,7 @@ platform = espressif32@^3.2.0
 
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
-board_build.partitions = user_setups/esp32/partition_app1704k_spiffs720k.csv
+board_build.partitions = user_setups/esp32/partitions_4MB.csv
 board_build.filesystem = littlefs
 board_build.embed_files =
     data/edit.htm.gz
@@ -117,6 +117,7 @@ build_flags =
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=61440U           ; 60kB lvgl memory
     -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
+    ;-D LV_FS_PC_PATH="/lfs"         ; this needs to match the vfs mount pount
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
