--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -8,15 +8,15 @@
 [env:lanbon_l8]
 extends = esp32
 board = esp32dev
-
 board_upload.flash_size=8MB
 board_upload.maximum_size = 8388608
-board_build.partitions = user_setups/esp32/partition_app2000k_spiffs4000k.csv
+board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
     ${esp32.ps_ram}
+    -D HASP_MODEL="Lanbon L8"
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.st7789v}
