Add png support

--- a/platformio.ini
+++ b/platformio.ini
@@ -117,7 +117,8 @@ build_flags =
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=61440U           ; 60kB lvgl memory
     -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
-    ;-D LV_FS_PC_PATH="/lfs"         ; this needs to match the vfs mount pount
+    ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
+    -D LODEPNG_NO_COMPILE_ALLOCATORS ; use PSram functions
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
@@ -130,6 +131,7 @@ build_flags =
     ;-D HASP_USE_EEPROM=1
     -D HASP_USE_CONFIG=1            ; Native application, not library
     -D LV_LOG_TRACE_TIMER=1
+    -D HASP_USE_PNGDECODE=1
 ; -- LittleFS build options ------------------------
 	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
 
@@ -146,6 +148,7 @@ lib_ignore =
 
 lib_deps =
     LittleFS_esp32
+    git+https://github.com/lvgl/lv_lib_png.git
 
 ps_ram =
     -DBOARD_HAS_PSRAM
