--- a/user_setups/win32/windows_sdl_64bits.ini
+++ b/user_setups/win32/windows_sdl_64bits.ini
@@ -28,6 +28,7 @@ build_flags =
   -D HASP_USE_GPIO=1
   -D HASP_USE_CONFIG=0            ; Standalone application, as library
   -D HASP_USE_DEBUG=1
+  -D HASP_USE_PNGDECODE=1
   -D HASP_USE_MQTT=1
   -D MQTT_MAX_PACKET_SIZE=2048
   -D HASP_ATTRIBUTE_FAST_MEM=
@@ -83,6 +84,7 @@ lib_deps =
   https://github.com/eclipse/paho.mqtt.c.git
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
   https://github.com/fvanroie/lv_drivers
+  git+https://github.com/lvgl/lv_lib_png.git
 
 lib_ignore =
   paho
