--- a/platformio.ini
+++ b/platformio.ini
@@ -117,6 +117,7 @@ build_flags =
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=49152U           ; 48 kB lvgl memory
     -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
+    -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
     ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
     -D LODEPNG_NO_COMPILE_ALLOCATORS ; use PSram functions
 ; -- ArduinoJson build options ----------------------------
@@ -195,6 +196,7 @@ build_flags=
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=12288U              ; 12kB lvgl memory
     -D LV_ATTRIBUTE_FAST_MEM=
+    -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1    ; for PROGMEM arguments
     -D ARDUINOJSON_ENABLE_STD_STRING=1 ; for std::string
