--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ include/user_config_override.h
 src/user_config_override.h
 user_config_override.h
 platformio_override.ini
+test/config.yaml
 user_setups/active/*
 build_output/*
 build_output/firmware/*.bin
