--- a/test/test_obj.tavern.yaml
+++ b/test/test_obj.tavern.yaml
@@ -36,7 +36,7 @@ marks:
         - arc
         # - led # has a shadow bug
         - obj
-        - lmeter
+        - linemeter
         - dropdown
         - calendar
         - spinner
