--- a/test/test_range.tavern.yaml
+++ b/test/test_range.tavern.yaml
@@ -25,7 +25,7 @@ marks:
         - bar
         - slider
         - gauge
-        - lmeter
+        - linemeter
   - parametrize:
       key:
         - min
