--- a/test/test_value_str.tavern.yaml
+++ b/test/test_value_str.tavern.yaml
@@ -64,7 +64,7 @@ marks:
         - arc
         - led
         - obj
-        - lmeter
+        - linemeter
         - dropdown
         - spinner
         - roller
